# GryFlux

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
docs/: UnifiedAllocator.md  cuda_allocator_benchmark_performance.md  streaming_guide.md
include/framework/: data_consumer.h  data_object.h  data_producer.h  pipeline_builder.h  processing_task.h  streaming_pipeline.h  task_node.h  task_scheduler.h  thread_pool.h
include/utils/: logger.h  thread_priority.h  threadsafe_queue.h  unified_allocator.h
src/app/: CMakeLists.txt
src/app/example/: CMakeLists.txt  example_stream.cpp
src/app/example/package/: custom_package.h
src/app/example/sink/test_consumer/: test_consumer.cpp  test_consumer.h
src/app/example/source/test_producer/: test_producer.cpp  test_producer.h
src/app/example/tasks/feature_extractor/: feature_extractor.cpp  feature_extractor.h
src/app/example/tasks/image_preprocess/: image_preprocess.cpp  image_preprocess.h
src/app/example/tasks/object_detector/: object_detector.cpp  object_detector.h
src/app/example/tasks/object_tracker/: object_tracker.cpp  object_tracker.h
src/app/example/tasks/res_sender/: res_sender.cpp
src/app/yolox/: CMakeLists.txt  yolox_stream.cpp
src/app/yolox/package/: package.h
src/app/yolox/source/producer/: image_producer.cpp  video_producer.cpp
src/app/yolox/tasks/ascend_runner/: ascend_runner.cpp  ascend_runner.h
src/app/yolox/tasks/image_preprocess/: image_preprocess.cpp
src/app/yolox/tasks/res_sender/: res_sender.cpp
src/app/yolox/tasks/rk_runner/: rk_runner.cpp  rk_runner.h
src/framework/: pipeline_builder.cpp  streaming_pipeline.cpp  task_node.cpp  task_scheduler.cpp  thread_pool.cpp
src/tests/: CMakeLists.txt
src/utils/: logger.cpp
